infra/k8s/base/caddy-static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-static
spec:
  selector:
    app: caddy-static
  ports:
    - port: 80
      targetPort: 80
